--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -1,3 +1,7 @@
 .sign-in-and-sign-up {
-    padding: 20px 20px;
+    // padding: 20px 20px;
+    display: flex;
+    justify-content: space-between;
+    width: 850px;
+    margin: 30px auto;
 }
